--- a/src/app/cpcc/cpcc.component.html
+++ b/src/app/cpcc/cpcc.component.html
@@ -23,7 +23,7 @@
           所属产品
         </th>
         <th>
-          分配数量
+          可分配数量
         </th>
       </tr>
       <tr *ngFor='let a of list;let i = index;trackBy:trackBy'>
