--- a/src/app/cpcjlb/cpcjlb.component.html
+++ b/src/app/cpcjlb/cpcjlb.component.html
@@ -56,7 +56,7 @@
           {{a.accountCode}}
         </td>
         <td>
-          {{a.accountCode}}
+          {{a.accountName}}
         </td>
         <td>
           {{a.dealTime}}
