--- a/src/app/cpcc/cpcc.component.html
+++ b/src/app/cpcc/cpcc.component.html
@@ -26,7 +26,7 @@
           可分配数量
         </th>
       </tr>
-      <tr *ngFor='let a of list;let i = index;trackBy:trackBy'>
+      <tr *ngFor='let a of list;let i = index;'>
         <!-- <td (click)='checkbox(i)'>
           <input type="checkbox" name="" id="" [(checked)]='a.isChecked'>
         </td> -->
