--- a/src/app/ghlb/ghlb.component.html
+++ b/src/app/ghlb/ghlb.component.html
@@ -51,19 +51,19 @@
           <input type="checkbox" name="" id="" [(checked)]='a.isChecked'>
         </td>
         <td (click)='checkbox(i)'>
-          {{a.stockCode}}
+          {{a.productCode}}
         </td>
         <td (click)='checkbox(i)'>
-          {{a.stockName}}
+          {{a.productName}}
         </td>
         <td (click)='checkbox(i)'>
-          {{a.stockCnt}}
+          {{a.allottedScale}}
         </td>
         <td (click)='checkbox(i)'>
-          {{a.ableCnt}}
+          {{a.totalScale}}
         </td>
         <td>
-          {{a.productName}}
+          {{a.ableScale}}
         </td>
         <td (click)='checkbox(i)'>
           <input type="number" class="table-input" [(ngModel)]='a.bcgh'>
