--- a/src/app/zhxx/zhxx.component.html
+++ b/src/app/zhxx/zhxx.component.html
@@ -76,7 +76,7 @@
           {{a.accountName}}
         </td>
         <td>
-          {{a.bpLineNow}}
+          {{a.statusDesc}}
         </td>
         <!-- <td>
           {{a.bpLine}}
