--- a/src/app/cpzj/cpzj.component.css
+++ b/src/app/cpzj/cpzj.component.css
@@ -6,3 +6,19 @@
     margin-top: 13px;
     cursor: pointer;
 }
+
+.alert-div div{
+    width: 125px;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    background: rgb(249, 249, 249);
+    margin-top: 3px;
+}
+
+.alert-div div:hover{
+    background: rgb(156, 215, 255);
+}
