--- a/src/app/cpgl/cpgl.component.html
+++ b/src/app/cpgl/cpgl.component.html
@@ -3,7 +3,7 @@
     <span class="dataSpan">{{name}}</span>
     产品编号：
     <span class="dataSpan">{{code}}</span>
-    产品总盈亏：
+    产品当日发生金额：
     <span class="dataSpan">{{price}}</span>
 </div>
 <button *ngIf='historyFooter' class="back-btn button-history" (click)='back()'>返回</button>
