--- a/src/app/dplb/dplb.component.html
+++ b/src/app/dplb/dplb.component.html
@@ -9,6 +9,9 @@
     <table class="my-table">
       <tr>
         <th>
+          委托时间
+        </th>
+        <th>
           产品编号
         </th>
         <th>
@@ -18,13 +21,7 @@
           投顾姓名
         </th>
         <th>
-          委托时间
-        </th>
-        <th>
           委托编号
-        </th>
-        <th>
-          委托状态
         </th>
         <th>
           股票代码
@@ -33,13 +30,10 @@
           股票名称
         </th>
         <th>
-          买卖方向
+          委托数量
         </th>
         <th>
           委托价格
-        </th>
-        <th>
-          委托数量
         </th>
         <th>
           成交数量
@@ -48,10 +42,10 @@
           成交均价
         </th>
         <th>
-          待平数量
+          委托状态
         </th>
         <th>
-          当前盈亏
+          买卖方向
         </th>
         <th>
           团队编号
@@ -59,11 +53,14 @@
         <th>
           市价
         </th>
-        <th style="min-width: 160px;" *ngIf='roleCode!=="0"'>
+        <th style="min-width: 60px;" *ngIf='roleCode!==0'>
           操作
         </th>
       </tr>
       <tr *ngFor='let a of list' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
+        <td>
+          {{a.appointTime}}
+        </td>
         <td>
           {{a.productCode}}
         </td>
@@ -73,29 +70,22 @@
         <td>
           {{a.accountName}}
         </td>
-        <td>
-          {{a.appointTime}}
-        </td>
         <td class="wtbh">
           {{a.appointOrderCode}}
         </td>
-        <td>
-          {{a.appointStatusDesc}}
-        </td>
+
         <td>
           {{a.stockCode}}
         </td>
         <td>
           {{a.stockName}}
         </td>
+
         <td>
-          {{a.appointTypeDesc}}
+          {{a.appointCnt}}
         </td>
         <td>
           {{a.appointPrice}}
-        </td>
-        <td>
-          {{a.appointCnt}}
         </td>
         <td>
           {{a.dealCnt}}
@@ -104,10 +94,10 @@
           {{a.dealAvrPrice}}
         </td>
         <td>
-          {{a.uncloseCnt}}
+          {{a.appointStatusDesc}}
         </td>
         <td>
-          {{a.profit}}
+          {{a.appointTypeDesc}}
         </td>
         <td>
           {{a.teamCode}}
