--- a/src/app/tdgl/tdgl.component.html
+++ b/src/app/tdgl/tdgl.component.html
@@ -1,7 +1,7 @@
 <div class="dryk" *ngIf='tdglFooter'>
     团队名称： <span class="dataSpan">{{name}}</span> 
     团队编号：<span class="dataSpan">{{code}}</span> 
-    投顾当日总盈亏：<span class="dataSpan">{{price}}</span>
+    投顾总盈亏：<span class="dataSpan">{{price}}</span>
 </div>
 <button *ngIf='!tdglFooter' class="back-btn button-history" (click)='back()'>返回</button>
 <div class="tdgl-content">
