--- a/src/app/lslyl/lslyl.component.html
+++ b/src/app/lslyl/lslyl.component.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="search-div history-search">
-    <span *ngIf='url === "tdgl"'>交易账户</span>
+    <span *ngIf='url === "tdgl"'>投顾账户</span>
     <input *ngIf='url === "tdgl"' type="text" [(ngModel)]='historyKeyWord.accountCode'>
     <span>交易日期</span>
     <input type="date" [(ngModel)]='historyKeyWord.selectDate'>
