--- a/src/app/cpcjlb/cpcjlb.component.html
+++ b/src/app/cpcjlb/cpcjlb.component.html
@@ -6,22 +6,10 @@
     <table class="my-table">
       <tr>
         <th>
-          序号
+          成交时间
         </th>
         <th>
           成交编号
-        </th>
-        <th>
-          团队编号
-        </th>
-        <th>
-          投顾账号
-        </th>
-        <th>
-          投顾姓名
-        </th>
-        <th>
-          成交时间
         </th>
         <th>
           委托编号
@@ -41,25 +29,25 @@
         <th>
           成交价
         </th>
+        <th>
+          团队编号
+        </th>
+        <th>
+          产品编号
+        </th>
+        <th>
+          投顾账号
+        </th>
+        <th>
+          投顾姓名
+        </th>
       </tr>
       <tr *ngFor='let a of list;let i = index' class="{{a.appointTypeDesc === '买入'?'red':'green'}}">
         <td>
-          {{i + 1}}
+          {{a.dealTime}}
         </td>
         <td>
           {{a.tradeId}}
-        </td>
-        <td>
-          {{a.teamCode}}
-        </td>
-        <td>
-          {{a.accountCode}}
-        </td>
-        <td>
-          {{a.accountName}}
-        </td>
-        <td>
-          {{a.dealTime}}
         </td>
         <td class="wtbh">
           {{a.appointOrderCode}}
@@ -78,6 +66,18 @@
         </td>
         <td>
           {{a.dealAvrPrice}}
+        </td>
+        <td>
+          {{a.productCode}}
+        </td>
+        <td>
+          {{a.productCode}}
+        </td>
+        <td>
+          {{a.accountCode}}
+        </td>
+        <td>
+          {{a.accountName}}
         </td>
       </tr>
     </table>
