--- a/src/app/cclb/cclb.component.html
+++ b/src/app/cclb/cclb.component.html
@@ -6,25 +6,25 @@
     <table class="my-table">
       <tr>
 
-        <th>
+        <th (click)='sortList("stockCode")'>
           股票代码
         </th>
-        <th>
+        <th (click)='sortList("stockName")'>
           股票名称
         </th>
-        <th>
+        <th (click)='sortList("stockCnt")'>
           持仓数量
         </th>
-        <th>
+        <th (click)='sortList("stockCntAble")'>
           可用数量
         </th>
-        <th>
+        <th (click)='sortList("profit")'>
           参考盈亏
         </th>
-        <th>
+        <th (click)='sortList("costPrice")'>
           参考成本
         </th>
-        <th>
+        <th (click)='sortList("lastPrice")'>
           现价
         </th>
         <th>
