--- a/src/app/zhxx/zhxx.component.html
+++ b/src/app/zhxx/zhxx.component.html
@@ -58,7 +58,7 @@
         <th>
           市值
         </th>
-        <th>
+        <th (click)='sortList()'>
           总盈亏
         </th>
         <th>
