--- a/src/app/cjlb/cjlb.component.html
+++ b/src/app/cjlb/cjlb.component.html
@@ -74,7 +74,7 @@
           {{a.dealAvrPrice}}
         </td>
         <td>
-          {{a.productCode}}
+          {{a.teamCode}}
         </td>
         <td>
           {{a.productCode}}
