--- a/src/app/cpwtlb/cpwtlb.component.html
+++ b/src/app/cpwtlb/cpwtlb.component.html
@@ -101,7 +101,7 @@
           {{a.dealAvrPrice}}
         </td>
         <td>
-          {{a.productCommission}}
+          {{a.productCommission | numFormat}}
         </td>
         <td>
           {{a.productHappyAmount}}
