--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -1,4 +1,4 @@
-<span class="title">日内风控系统</span>
+<span class="title">投顾平台风控端</span>
 <span>账号： {{username}}</span>
 <span (click)='logout()'>注销</span>
 <!-- <span>交易正常</span>
