--- a/src/app/ghlb/ghlb.component.html
+++ b/src/app/ghlb/ghlb.component.html
@@ -13,7 +13,7 @@
     <button (click)='searchAll()'>查询全部</button>
   </div>
   <div class="action-button">
-    <button class="button" (click)='fpjyy()' [disabled]='disabled(checkList.length)'>归还给团队</button>
+    <button class="button" (click)='fpjyy()' [disabled]='disabled(checkList.length)'>提盈</button>
   </div>
   <div class="table-div my-scroll">
     <table class="my-table">
