--- a/src/app/lswtlb/lswtlb.component.html
+++ b/src/app/lswtlb/lswtlb.component.html
@@ -121,10 +121,10 @@
           产品编号
         </th>
         <th>
-          交易账号
+          投顾账号
         </th>
         <th>
-          交易员姓名
+          投顾姓名
         </th>
         <th>
           团队编号
