--- a/src/app/lscj/lscj.component.html
+++ b/src/app/lscj/lscj.component.html
@@ -102,10 +102,10 @@
           产品编号
         </th>
         <th>
-          交易员账号
+          投顾账号
         </th>
         <th>
-          交易员姓名
+          投顾姓名
         </th>
         <th>
           团队编号
